# launcher

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
dal/: Cargo.toml  README.md
dal/migrations/2021-05-02-185637_create_auths/: up.sql
dal/migrations/2021-05-03-145155_nickname_to_name/: down.sql  up.sql
dal/migrations/2021-05-03-193008_add_user_image/: down.sql  up.sql
dal/src/: auths_service.rs  lib.rs  models.rs  schema.rs  users_service.rs
dal/src/services/: auths_service.rs  mod.rs  users_service.rs
migrations/2021-04-26-091042_create_users/: up.sql
migrations/2021-05-02-185637_create_auths/: down.sql
src/: app_context.rs  constants.rs  main.rs  request_parsers.rs  schema.rs
src/guards/: mod.rs  range_header.rs
src/libs/: json_catcher.rs  mod.rs  models.rs  responders.rs  schema.rs
src/responders/: mod.rs  stream_responder.rs
src/routers/: auths.rs  dirs.rs  mod.rs  others.rs  streams.rs  users.rs
src/routers/others/: cors.rs  mod.rs  not_found.rs  server_status.rs  unauthorized.rs
src/tests/: integration_test.rs
