[package]
edition = "2018"
name = "launcher"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime_guess = "2.0.3"
rocket = "0.4.7"

[dependencies.rocket_contrib]
default-features = false
features = ["serve", "json"]
version = "0.4.7"

[dependencies.serde]
features = ["derive"]
version = "1.0.125"
