[package]
edition = "2018"
name = "launcher"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "dal"
]

[dependencies]
dal = { path = "./dal" }
mime_guess = "2.0.3"
rocket = "0.4.10"
dotenv = "0.15.0"
nanoid = "0.4.0"
serde_json = "1.0.64"
sys-info = "0.9.0"
sysinfo = "0.17.2"
base64 = "0.13.0"
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
anyhow = "1.0.40"
battery = "0.7.8"
image = "0.23.14"

[dev-dependencies]
diesel_migrations = "1.4.0"

[dependencies.rocket_contrib]
default-features = false
features = ["serve", "json"]
version = "0.4.7"

[dependencies.serde]
features = ["derive"]
version = "1.0.125"

[dependencies.diesel]
features = ["sqlite"]
version = "1.4.6"
